# polylower

./: .gitignore  CMakeLists.txt  Makefile  activate.sh  mesh.cpp  mesh.hpp  test.sh  triangulation2d.cpp  util.cpp  util.hpp  vec.hpp
docker/: Dockerfile  entrypoint.sh
src/: mesh.cpp  mesh.hpp  obj.cpp  obj.hpp  polylower.cpp  polylower.hpp  test.cpp  triangulation2d.hpp
